<resources>
    <string name="app_name">MinerApp</string>

    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_confirm_password">Confirm Password</string>
    <string name="login_sing_in">Sing In</string>
    <string name="login_sing_up">Sing Up</string>
    <string name="login_reset_password">Reset my password</string>
    <string name="login_sing_in_google">Sing In with Google</string>
    <string name="login_forgot_password">I have Forgotten my password</string>
    <string name="login_create_account">Create a new account</string>
    <string name="login_go_login">Go back to Login</string>
    <string name="toolbar">App Mina</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_text_1">Basic Data</string>
    <string name="tab_text_2">Jobs</string>
    <string name="sin_editar">Sin Editar</string>
    <string name="hasta">HASTA</string>
    <string name="desde">DESDE</string>
    <string name="select_job">Seleccione un Trabajo</string>
    <string name="error_add_actividaddes">Ya no se puede agregar mas Actividades</string>
    <string name="aceptar">Aceptar</string>


</resources>
