<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimaryDark"
    android:fillViewport="true"
    tools:context=".views.SingUpActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true">


    <EditText
        android:id="@+id/editTextEmail"
        style="@style/EditTextDark"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_edit_text_height"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="24dp"
        android:hint="@string/login_email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextPassword"
        style="@style/EditTextDark"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_edit_text_height"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="24dp"
        android:hint="@string/login_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/editTextConfirmPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />


    <EditText
        android:id="@+id/editTextConfirmPassword"
        style="@style/EditTextDark"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_edit_text_height"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="24dp"
        android:hint="@string/login_confirm_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/buttonSingUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonSingUp"
        style="@style/ButtonPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_button_xl_height"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="64dp"
        android:text="@string/login_sing_up"
        app:layout_constraintBottom_toTopOf="@+id/buttonGoLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonGoLogin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_button_xl_height"
        android:background="@drawable/button_ripple"
        android:text="@string/login_go_login"
        android:textColor="@color/colorSecondaryText"
        android:textSize="@dimen/textsize_primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>